role based fetch
